# mlops-zoomcamp

./: pyproject.toml
week1-intro/: homework_01.ipynb
week2-experiment-tracking/: homework02.ipynb  hpo.py  register_model.py  train.py
week3-orchestration/: homework_mage.md
week4-deployment/: Dockerfile  Pipfile  commands_to_run.txt  homework04.md  predict.py  predict_cli.py  requirements.txt  starter.ipynb  starter.py  test.py
week5-monitoring/: docker-compose.yml  homework_05.md
week5-monitoring/config/: grafana_datasources.yaml
